syntax = "proto3";
package scrm;

// The greeting service definition.
service scrmService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string sex = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
